# algonest-repo

./: .dockerignore  .env.example  .env.production  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml
docs/: CHANGELOG.md  SETUP-REQUIREMENTS.md
messages/: ar.json  en.json
pipelines/: Dockerfile  README.md  pyproject.toml
pipelines/pipelines/flows/: daily.py
pipelines/pipelines/jobs/: deduplicate.py  embed_researchers.py  openalex_sync.py  scopus_sync.py  wos_sync.py
pipelines/pipelines/lib/: db.py
public/: sw.js
src/: proxy.ts
src/app/: globals.css
src/app/[locale]/: layout.tsx  (+1 more)
src/lib/: logger.ts
supabase/: README.md
supabase/migrations/: 20260416121000_storage_buckets.sql  20260416130000_is_admin.sql  20260416130100_enable_rls.sql  20260416130200_revoke_anon_grants.sql  20260416130300_views.sql  20260416130400_policies_researchers.sql  20260416130500_policies_child_tables.sql  20260416130600_policies_admin_audit_settings.sql  20260416130700_rpcs.sql  20260416140000_enforce_institutional_email.sql  20260416140100_link_user_to_researcher.sql  20260416141000_pagination_extra_filters.sql  20260417130000_semantic_search_rpcs.sql  20260417140000_sync_state.sql  20260417180000_fix_public_visibility_and_auto_create.sql  20260420200000_chat_visitor_lead.sql  20260420300000_researcher_activities.sql
supabase/tests/: rls_smoke.sql
tests/e2e/: smoke.spec.ts
tests/unit/: url.test.ts
(+105 files in other folders)
